--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,107 +1,111 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+  padding-top: 50px;
+  padding-bottom: 20px;
 }
 
 .navigation-section {
-    display: none;
+  display: none;
 }
 
 .navigation-section.visible {
-    display: block;
+  display: block;
 }
 
 .row.align-bottom {
-    font-size: 0;
+  font-size: 0;
 }
 
 .row.align-bottom > * {
-    float: none;
-    display: inline-block;
-    vertical-align: bottom;
-    font-size: 14px;
+  float: none;
+  display: inline-block;
+  vertical-align: bottom;
+  font-size: 14px;
 }
 
 .m-bottom-10 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 a.reset {
-    color: inherit;
-    text-decoration: inherit;
+  color: inherit;
+  text-decoration: inherit;
 }
 
 a.reset:hover {
-    color: inherit;
-    text-decoration: inherit;
+  color: inherit;
+  text-decoration: inherit;
 }
 
 .form-group.no-margin {
-    margin-left: 0;
-    margin-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .badge.floating {
-    float: right;
+  float: right;
 }
 
 .responsive-img {
-    max-width: 100%;
-    margin: auto;
-    display: block;
+  max-width: 100%;
+  margin: auto;
+  display: block;
 }
 
 .paginated-list {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .paginated-list .list-group {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .paginated-list .form-group,
 .paginated-list .input-group {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .paginated-list .pagination-bar .pagination {
-    margin: 0;
+  margin: 0;
+}
+
+.paginated-list .pagination-bar .dropup {
+  position: relative;
 }
 
 .paginated-list .dropdown-menu {
-    min-width: auto;
+  min-width: auto;
 }
 
 .paginated-list ul.clickable > li {
-    cursor: pointer;
-    padding: 0;
+  cursor: pointer;
+  padding: 0;
 }
 
 .paginated-list ul.clickable > li > a,
 .paginated-list ul.clickable > li > span {
-    display: block;
-    padding: 10px 15px;
+  display: block;
+  padding: 10px 15px;
 }
 
 .paginated-list .pagination-bar ul.clickable > li > a,
 .paginated-list .pagination-bar ul.clickable > li > span {
-    padding: 6px 12px;
+  padding: 6px 12px;
 }
 
 .paginated-list .pagination-bar ul.dropdown-menu > li > span {
-    padding: 3px 20px;
-    cursor: pointer;
-    display: block;
+  padding: 3px 20px;
+  cursor: pointer;
+  display: block;
 }
 
 .paginated-list .clear-icon {
-    position: absolute;
-    right: 10px;
-    top: 0;
-    bottom: 0;
-    height: 14px;
-    margin: auto;
-    font-size: 14px;
-    cursor: pointer;
-    z-index: 10;
+  position: absolute;
+  right: 10px;
+  top: 0;
+  bottom: 0;
+  height: 14px;
+  margin: auto;
+  font-size: 14px;
+  cursor: pointer;
+  z-index: 10;
 }
